mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: mongodb-deployment
   labels:
      app: mongodb
spec:      
   replicas: 1
   selector:
      matchLabels:
         app: mongodb
   template:
      metadata:     
         labels:     
            app: mongodb     
      spec:   
         containers:
         - name: mongodb
           image: mongo
           ports:
           - containerPort: 27017
