mongo-express-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: mongo-express-internal-service
spec:
   selector:
      app: mongo-express
   ports:
      - protocol: TCP
        port: 8080
        targetPort: 8081
