mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: mongo-express-ingress
spec:
   rules:
   - host: mongo-express.com
     http:
        paths:
        - backend:
             serviceName: mongo-express-internal-service
             servicePort: 8080
